syntax = "proto3";

package device;

option go_package = "github.com/Ks89/air-conditioner/api-devices/device";

service Device {
  rpc GetStatus (StatusRequest) returns (StatusResponse) {}
  rpc SetValues (ValuesRequest) returns (ValuesResponse) {}
}

message StatusRequest {
  string id = 1;
  string uuid = 2;
  string mac = 3;
  string api_token = 4;
}

message StatusResponse {
  bool on = 1;
  int32 temperature = 2;
  int32 mode = 3;
  int32 fan_speed = 4;
}

message ValuesRequest {
  string id = 1;
  string uuid = 2;
  string mac = 3;
  string api_token = 4;
  bool on = 5;
  int32 temperature = 6;
  int32 mode = 7;
  int32 fan_speed = 8;
}

message ValuesResponse {
  string status = 1;
  string message = 2;
}